--- a/src/main/resources/templates/customerEdit.html
+++ b/src/main/resources/templates/customerEdit.html
@@ -207,7 +207,18 @@
 								<div class="input-group">
 									<label class="label">
 										<div class="txt">Password</div>
-										<div class="warning" ng-show="passwordError">
+										<div class="col-12" id="pswd_info" ng-show="myForm.password.$invalid && myForm.password.$touched || passwordError">
+                                            <p>Password must meet the following requirements:</p>
+                                            <ul>
+                                            <li id="length" class="invalid" ng-show="myForm.password.$invalid && myForm.password.$touched"><i class='bx bxs-error-alt'></i><p>Required</p></li>
+                                            <li id="length" class="invalid" ng-show="passwordError"><i class='bx bxs-error-alt'></i><p>{{ passwordError }}</p></li>
+                                            </ul>
+                                        </div>
+										<div class="warning-pass" ng-show="myForm.password.$error.required && myForm.password.$touched">
+											<i class='bx bxs-error-alt'></i>
+											Required.
+										</div>
+										<div class="warning-pass" ng-show="passwordError">
 											<i class='bx bxs-error-alt'></i>
 											<p>{{ passwordError }}</p>
 										</div>
