clean code works

--- a/src/main/resources/templates/healthInsuranceRefund.html
+++ b/src/main/resources/templates/healthInsuranceRefund.html
@@ -53,7 +53,7 @@
 				</ul>
 			</div>
 			<div class="operations">
-				<a th:href="@{'/userPage/' + ${username}}">
+				<a th:href="@{'/userPage/' + ${customer.username}}">
 					<i class='bx bxs-user-circle user-icon'></i>
 					<span th:text="${username}"></span>
 				</a>
