Change Refund Company img

--- a/src/main/resources/templates/homeInsuranceCalculate.html
+++ b/src/main/resources/templates/homeInsuranceCalculate.html
@@ -83,7 +83,7 @@
                                     <div class="card-body price-plans">
                                         <div class="planImageBackground"><img th:src="@{/img/plan-Intersect.png}" src="/src/main/resources/static/img/plan-Intersect.png" alt=""></div>
                                         <div class="planImageBackground-hidden"><img th:src="@{/img/hidden-intersect.png}" src="/src/main/resources/static/img/hidden-intersect.png" alt=""></div>
-                                        <div class="planImageCircleLeft"><img th:src="@{/img/Aviva_Logo.png}" src="/src/main/resources/static/img/Aviva_Logo.png" width="150px" alt=""></div>
+                                        <div class="planImageCircleLeft"><img th:src="@{/img/Aviva-Logo.png}" src="/src/main/resources/static/img/Aviva_Logo.png" width="150px" alt=""></div>
                                         <div class="planImageCircleRight"><img th:src="@{/img/plan-circle-bottom.png}" src="/src/main/resources/static/img/plan-circle-bottom.png" alt=""></div>
                                         <small>Aviva</small>
                                         <h3 th:text="${insurance.offer + companyList[0].serviceFee + '₺'}"></h3>
@@ -107,7 +107,7 @@
                                     <div class="card-body price-plans">
                                         <div class="planImageBackground"><img th:src="@{/img/plan-Intersect.png}" src="/src/main/resources/static/img/plan-Intersect.png" alt=""></div>
                                         <div class="planImageBackground-hidden"><img th:src="@{/img/hidden-intersect.png}" src="/src/main/resources/static/img/hidden-intersect.png" alt=""></div>
-                                        <div class="planImageCircleLeft"><img th:src="@{/img/Liberty-Mutual-Logo.png}" src="/src/main/resources/static/img/Liberty-Mutual-Logo.png" width="150px" alt=""></div>
+                                        <div class="planImageCircleLeft"><img th:src="@{/img/Liberty Mutual-Logo.png}" src="/src/main/resources/static/img/Liberty-Mutual-Logo.png" width="150px" alt=""></div>
                                         <div class="planImageCircleRight"><img th:src="@{/img/plan-circle-bottom.png}" src="/src/main/resources/static/img/plan-circle-bottom.png" alt=""></div>
                                         <small>Liberty Mutual</small>
                                         <h3 th:text="${insurance.offer + companyList[1].serviceFee + '₺'}"></h3>
@@ -131,7 +131,7 @@
                                     <div class="card-body price-plans">
                                         <div class="planImageBackground"><img th:src="@{/img/plan-Intersect.png}" src="/src/main/resources/static/img/plan-Intersect.png" alt=""></div>
                                         <div class="planImageBackground-hidden"><img th:src="@{/img/hidden-intersect.png}" src="/src/main/resources/static/img/hidden-intersect.png" alt=""></div>
-                                        <div class="planImageCircleLeft"><img th:src="@{/img/AXA.png}" src="/src/main/resources/static/img/AXA.png" width="150px" alt=""></div>
+                                        <div class="planImageCircleLeft"><img th:src="@{/img/AXA-Logo.png}" src="/src/main/resources/static/img/AXA.png" width="150px" alt=""></div>
                                         <div class="planImageCircleRight"><img th:src="@{/img/plan-circle-bottom.png}" src="/src/main/resources/static/img/plan-circle-bottom.png" alt=""></div>
                                         <div class="recommended-price">Recommended</div>
                                         <small>AXA</small>
