--- a/src/main/resources/templates/carInsuranceRefund.html
+++ b/src/main/resources/templates/carInsuranceRefund.html
@@ -67,7 +67,7 @@
                      <div class="receipt-main col-xs-12 col-sm-12 col-md-6 col-xs-offset-1 col-sm-offset-1 col-md-offset-3">
                          <div class="row refund-user-details">
                             <div class="refund-print">
-                                <img class="img-responsive" th:src="@{/img/Liberty-Mutual-Logo.png}" src="/src/main/resources/static/img/Liberty-Mutual-Logo.png" width="150px">
+                                <img class="img-responsive" th:src="@{/img/__${company.name}__-Logo.png}" src="/src/main/resources/static/img/Liberty-Mutual-Logo.png" width="150px">
                                 <div>
                                     <a class="btn btn-sm btn-secondary float-right mr-1 d-print-none" href="#" onclick="javascript:printContent();" data-abc="true">
                                         <i class="fa fa-print"></i> Print
