--- a/src/main/resources/templates/healthInsuranceRefund.html
+++ b/src/main/resources/templates/healthInsuranceRefund.html
@@ -28,7 +28,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container-fluid px-5">
 			<a class="navbar-brand" href="#">
-				<img th:src="@{/img/Happy-logoo.png}" src="/src/main/resources/static/img/Happy-logoo.png"
+				<img th:src="@{/img/Happy-Logo.png}" src="/src/main/resources/static/img/Happy-Logo.png"
 					alt="happyLogo" class="rounded img-fluid" style="width: 200px;">
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -55,7 +55,7 @@
 			<div class="operations">
 				<a th:href="@{'/userPage/' + ${customer.username}}">
 					<i class='bx bxs-user-circle user-icon'></i>
-					<span th:text="${username}"></span>
+					<span th:text="${customer.username}"></span>
 				</a>
 				<a href="/index">
 					<i class='bx bx-log-out exit-icon'></i>
@@ -73,8 +73,8 @@
 						class="receipt-main col-xs-12 col-sm-12 col-md-6 col-xs-offset-1 col-sm-offset-1 col-md-offset-3">
 						<div class="row refund-user-details">
 							<div class="refund-print">
-								<img class="img-responsive" th:src="@{/img/Liberty-Mutual-Logo.png}"
-									src="/src/main/resources/static/img/Liberty-Mutual-Logo.png" width="150px">
+								<img class="img-responsive" th:src="@{/img/__${company.name}__-Logo.png}"
+									src="/src/main/resources/static/img/Liberty Mutual-Logo.png" width="150px">
 								<div>
 									<a class="btn btn-sm btn-secondary float-right mr-1 d-print-none" href="#"
 										onclick="javascript:printContent();" data-abc="true">
