refund date fixed

--- a/src/main/resources/templates/carInsuranceRefund.html
+++ b/src/main/resources/templates/carInsuranceRefund.html
@@ -143,7 +143,8 @@
                              <div class="refund-header-main receipt-footer">
                                  <div class="col-xs-12 col-sm-12 col-md-12 text-left">
                                      <div class="receipt-right">
-                                         <p><b>Date :</b> <span th:text="${#dates.format(insurance.startDate, 'dd/MM/yyyy HH:mm:ss')}"></span></p>
+                                         <p><b>Date :</b> <span
+												th:text="${now}"></span></p>
                                      </div>
                                  </div>
                              </div>
