--- a/src/main/resources/templates/healthInsuranceRefund.html
+++ b/src/main/resources/templates/healthInsuranceRefund.html
@@ -170,7 +170,7 @@
 								<div class="col-xs-12 col-sm-12 col-md-12 text-left">
 									<div class="receipt-right">
 										<p><b>Date :</b> <span
-												th:text="${#dates.format(now, 'dd/MM/yyyy HH:mm:ss')}"></span></p>
+												th:text="${now}"></span></p>
 									</div>
 								</div>
 							</div>
