--- a/src/main/resources/templates/seeHomeInsuranceDetails.html
+++ b/src/main/resources/templates/seeHomeInsuranceDetails.html
@@ -62,7 +62,7 @@
 			<div class="operations">
 				<a th:href="@{'/userPage/' + ${username}}">
 					<i class='bx bxs-user-circle user-icon'></i>
-					<span th:text="${username}"></span>
+					<span th:text="${customer.username}"></span>
 				</a>
 				<a href="/index">
 					<i class='bx bx-log-out exit-icon'></i>
